--- a/daraz clone/index.html
+++ b/daraz clone/index.html
@@ -85,6 +85,57 @@
     <div class="banner">
         <img src="./img/flash-sell.jpg">
     </div>
+    <div class="tag">
+        <p> Flash Sale</p>
+        <div class="flash-icon">
+            <i class="fa-solid fa-bolt-lightning"></i>
+        </div>
+    </div>
+    <div class="products">
+        <div class="product-optn">
+            <p>On sale now !!!</p>
+            <button class="btn">Shop All Products</button>
+        </div>
+        <div class="flash-sell">
+            <div class="box1 common">
+                <img src="./img/dettol.jpg" alt="" width="170px">
+                <p>Dettol Soap 4pcs</p>
+                <p class="price">৳570</p>
+                <p><del>620</del> -10% </p>
+            </div>
+            <div class="box2 common">
+                <img src="./img/face-wash.jpg" alt="">
+                <p> Face Wash</p>
+                <p class="price">৳570</p>
+                <p><del>620</del> -10% </p>
+            </div>
+            <div class="box3 common">
+                <img src="./img/handwash].jpg" alt="">
+                <p>Hand Wash</p>
+                <p class="price">৳370</p>
+                <p><del>220</del> -40% </p>
+            </div>
+            <div class="box4 common">
+                <img src="./img/oil.jpg" alt="">
+                <p>Jui oil</p>
+                <p class="price">৳370</p>
+                <p><del>520</del> -30% </p>
+            </div>
+            <div class="box5 common">
+                <img src="./img/water-heater.jpg" alt="">
+                <p>Water Heater</p>
+                <p class="price">৳500</p>
+                <p><del>620</del> -12% </p>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="footer">
+        <div class="footer-txt">
+        </div>
+        <div class="flag"></div>
+    </div>
 
 </body>
 
