--- a/Chotpotify/index.html
+++ b/Chotpotify/index.html
@@ -22,9 +22,53 @@
                     <img src="./img/svg/library-svgrepo-com.svg" alt="">
                     <h2>Your Library</h2>
                 </div>
+                <div class="footer">
+                    <div><a href="https://www.spotify.com/jp/legal/"><span>Legal</span></a></div>
+                    <div><a href="https://www.spotify.com/jp/privacy/"><span>Privacy Center</span></a></div>
+                    <div><a href="https://www.spotify.com/jp/legal/privacy-policy/"><span>Privacy Policy</span></a>
+                    </div>
+                    <div><a href="https://www.spotify.com/jp/legal/cookies-policy/"><span>Cookies</span></a></div>
+                    <div><a href="https://www.spotify.com/jp/legal/privacy-policy/#s3"><span>About Ads</span></a></div>
+                    <div><a href="https://www.spotify.com/jp/accessibility/"><span>Accessibility</span></a></div>
+                </div>
             </div>
         </div>
-        <div class="right border"></div>
+        <div class="right bg-grey rounded ">
+            <div class="header flex ">
+                <div class="nav">
+                    <img src="./img/svg/left-2-svgrepo-com.svg" alt="left">
+                    <img src="./img/svg/right-2-svgrepo-com.svg" alt="">
+                </div>
+                <div class="buttons">
+                    <button class="signUpBtn">Sign Up</button>
+                    <button class="loginBtn">Log in</button>
+                </div>
+            </div>
+            <div class="spotifyPlaylists">
+                <h1>Taju's Playlist</h1>
+                <div class="cardContainer">
+                    <div class="card">
+                        <div class="play">
+                            <img src="./img/svg/play-circle-svgrepo-com.svg" alt="">
+                        </div>
+                        <img src="https://res.cloudinary.com/dgmaxgtno/image/upload/v1745446417/happy-hits_qqwdga.jpg" alt="">
+                        <h2>Happy Hits!</h2>
+                        <p>Hits to boost your mood and fill with happiness</p>
+                    </div>
+                </div>
+                <div class="playBar">
+                    <div class="songinfo"></div>
+                    <div class="songButtons">
+                        <img src="./img/svg/previous-svgrepo-com.svg" alt="">
+                        <img src="./img/svg/play-cricle-svgrepo-com.svg" alt="">
+                        <img src="./img/svg/next-svgrepo-com.svg" alt="">
+                    </div>
+                    <div class="songtime"></div>
+
+                </div>
+            </div>
+        </div>
     </div>
+    <script src="./script.js"></script>
 </body>
 </html>
