--- a/Chotpotify/index.html
+++ b/Chotpotify/index.html
@@ -22,6 +22,11 @@
                     <img src="./img/svg/library-svgrepo-com.svg" alt="">
                     <h2>Your Library</h2>
                 </div>
+                <div class="songList">
+                    <ul>
+
+                    </ul>
+                </div>
                 <div class="footer">
                     <div><a href="https://www.spotify.com/jp/legal/"><span>Legal</span></a></div>
                     <div><a href="https://www.spotify.com/jp/privacy/"><span>Privacy Center</span></a></div>
