pausing it for few days

--- a/Chotpotify/index.html
+++ b/Chotpotify/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="utility.css">
 </head>
+
 <body>
     <div class="container flex bg-black">
         <div class="left rounded">
@@ -41,6 +43,9 @@
         <div class="right bg-grey rounded ">
             <div class="header flex ">
                 <div class="nav">
+                    <div class="hamburgerContainer">
+                        <img width="40" class="invert hamburger" src="img/svg/menu-alt-2-svgrepo-com.svg" alt="">
+                    </div>
                     <img src="./img/svg/left-2-svgrepo-com.svg" alt="left">
                     <img src="./img/svg/right-2-svgrepo-com.svg" alt="">
                 </div>
@@ -56,7 +61,8 @@
                         <div class="play">
                             <img src="./img/svg/play-circle-svgrepo-com.svg" alt="">
                         </div>
-                        <img src="https://res.cloudinary.com/dgmaxgtno/image/upload/v1745446417/happy-hits_qqwdga.jpg" alt="">
+                        <img src="https://res.cloudinary.com/dgmaxgtno/image/upload/v1745446417/happy-hits_qqwdga.jpg"
+                            alt="">
                         <h2>Happy Hits!</h2>
                         <p>Hits to boost your mood and fill with happiness</p>
                     </div>
@@ -76,4 +82,5 @@
     </div>
     <script src="./script.js"></script>
 </body>
+
 </html>
