--- a/Quote Generator/index.html
+++ b/Quote Generator/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Random Buddha's quote <img src="./imgq/quote-svgrepo-com.svg" alt=""></h1>
+        <h1>Random Buddha's Quote <img src="./imgq/quote-svgrepo-com.svg" alt=""></h1>
         <blockquote class="quote"></blockquote>
         <span class="author"></span>
         <div class="btn">
