--- a/Stopwatch/index.html
+++ b/Stopwatch/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <div class="stopwatch">
-        <h1>00:00:00</h1>
+        <h1 class="displayTimes">00:00:00</h1>
         <div class="buttons">
             <img src="./imgS/pause-circle-svgrepo-com.svg" alt="">
-            <img src="./imgS/playback-speed-svgrepo-com.svg" alt="">
+            <img id="play" src="./imgS/playback-speed-svgrepo-com.svg" alt="">
             <img src="./imgS/power-svgrepo-com.svg" alt="">
         </div>
     </div>
