done with the project

--- a/Stopwatch/index.html
+++ b/Stopwatch/index.html
@@ -10,9 +10,9 @@
     <div class="stopwatch">
         <h1 class="displayTimes">00:00:00</h1>
         <div class="buttons">
-            <img src="./imgS/pause-circle-svgrepo-com.svg" alt="">
-            <img id="play" src="./imgS/playback-speed-svgrepo-com.svg" alt="">
-            <img src="./imgS/power-svgrepo-com.svg" alt="">
+            <img src="./imgS/pause-circle-svgrepo-com.svg" alt="" onclick="watchStop()">
+            <img id="play" src="./imgS/playback-speed-svgrepo-com.svg" alt="" onclick="watchStart()">
+            <img src="./imgS/power-svgrepo-com.svg" alt="" onclick="watchReset()">
         </div>
     </div>
     <script src="./index.js"></script>
