--- a/calculator/index.html
+++ b/calculator/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="./imgC/calculator-svgrepo-com.svg" type="image/x-icon">
 </head>
 <body>
     <div class="container">
