--- a/popup/index.html
+++ b/popup/index.html
@@ -8,7 +8,13 @@
 </head>
 <body>
     <div class="container">
-        
+        <button type="submit" class="btn" onclick="openPopup()">Submit</button>
+        <div class="popup" id="popup">
+            <img src="./imgP/checkmark-round-svgrepo-com.svg" alt="">
+            <h2>Thank You!</h2>
+            <p>Your details has been successfully submitted Thanks!</p>
+            <button type="button" onclick="closePopup()">OK</button>
+        </div>
     </div>
     <script src="./index.js"></script>
 </body>
