dark moded portfolio

--- a/Dark Mode/index.html
+++ b/Dark Mode/index.html
@@ -18,6 +18,7 @@
                 <li><a href="#">SERVICES</a></li>
                 <li><a href="#">HIRE ME</a></li>
             </ul>
+            <img src="./imgD/half-moon-moon-svgrepo-com.svg" id="icon">
         </nav>
         <div class="info">
             <h1> I'm <span>Fahim</span> Morshed</h1>
