--- a/Dark Mode/index.html
+++ b/Dark Mode/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio!</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
     <div class="hero">
         <nav>
@@ -18,16 +22,23 @@
                 <li><a href="#">SERVICES</a></li>
                 <li><a href="#">HIRE ME</a></li>
             </ul>
+            <div class="hamburger" id="hamburger">
+                <i class="fas fa-bars"></i>
+            </div>
             <img src="./imgD/half-moon-moon-svgrepo-com.svg" id="icon">
         </nav>
-        <div class="info">
-            <h1> I'm <span>Fahim</span> Morshed</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti voluptatem cupiditate,<br> eos velit sapiente tempore error ea aperiam culpa, expedita nulla recusandae aliquid <br> deserunt animi, ratione tempora rem quaerat repudiandae!</p>
-            <a href="#"> Download CV</a>
-        </div>
-        <div class="img-box">
-            <img src="./imgD/Blob-PNG-File.png" class="back-img">
-            <img src="./imgD/Adobe Express - file.png" class="main-img">
+        <div class="main">
+            <div class="info">
+                <h1> I'm <span>Fahim</span> Morshed</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti voluptatem cupiditate,<br> eos
+                    velit sapiente tempore error ea aperiam culpa, expedita nulla recusandae aliquid <br> deserunt
+                    animi, ratione tempora rem quaerat repudiandae!</p>
+                <a href="#"> Download CV</a>
+            </div>
+            <div class="img-box">
+                <img src="./imgD/Blob-PNG-File.png" class="back-img">
+                <img src="./imgD/Adobe Express - file.png" class="main-img">
+            </div>
         </div>
         <div class="social-links">
             <a href="#"><i class="fa-brands fa-linkedin"></i></a>
@@ -38,4 +49,5 @@
     </div>
     <script src="index.js"></script>
 </body>
+
 </html>
