--- a/from validation/index.html
+++ b/from validation/index.html
@@ -9,7 +9,25 @@
 </head>
 <body>
     <div class="container">
-        <i class="fa-solid fa-paper-plane"></i>
+        <form action="#">
+            <i class="fa-solid fa-paper-plane"></i>
+            <div class="input-group">
+                <label>Full Name</label>
+                <input type="text" placeholder="Enter Your Full Name">
+            </div>
+            <div class="input-group">
+                <label>Phone No.</label>
+                <input type="tel" placeholder="012345">
+            </div>
+            <div class="input-group">
+                <label>Full Name</label>
+                <input type="text" placeholder="Enter Your Full Name">
+            </div>
+            <div class="input-group">
+                <label>Full Name</label>
+                <input type="text" placeholder="Enter Your Full Name">
+            </div>
+        </form>
     </div>
     
 </body>
