form validation project

--- a/from validation/index.html
+++ b/from validation/index.html
@@ -17,18 +17,20 @@
             </div>
             <div class="input-group">
                 <label>Phone No.</label>
-                <input type="tel" placeholder="012345">
+                <input type="tel" placeholder="012345 - 78910">
             </div>
             <div class="input-group">
-                <label>Full Name</label>
-                <input type="text" placeholder="Enter Your Full Name">
+                <label>Email Id</label>
+                <input type="email" placeholder="Enter Your Email">
             </div>
             <div class="input-group">
-                <label>Full Name</label>
-                <input type="text" placeholder="Enter Your Full Name">
+                <label>Your Message</label>
+                <textarea rows="5"></textarea>
             </div>
+
+            <button>Submit</button>
         </form>
     </div>
-    
+    <script src="./index.js"></script>
 </body>
 </html>
