--- a/from validation/index.html
+++ b/from validation/index.html
@@ -14,20 +14,26 @@
             <div class="input-group">
                 <label>Full Name</label>
                 <input type="text" placeholder="Enter Your Full Name">
+                <span id="name-error">name is required </span>
             </div>
             <div class="input-group">
                 <label>Phone No.</label>
                 <input type="tel" placeholder="012345 - 78910">
+                <span id="phone-error">phone is required </span>
             </div>
             <div class="input-group">
                 <label>Email Id</label>
                 <input type="email" placeholder="Enter Your Email">
+                <span id="email-error">email is required </span>
             </div>
             <div class="input-group">
                 <label>Your Message</label>
                 <textarea rows="5"></textarea>
+                <span id="message-error">message is required </span>
             </div>
             <button>Submit</button>
+            <span id="submit-error">please complete all the input
+            </span>
         </form>
     </div>
     <script src="./index.js"></script>
