--- a/from validation/index.html
+++ b/from validation/index.html
@@ -6,6 +6,7 @@
     <title>Form Validation</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="./imgf/form-svgrepo-com.svg" type="image/x-icon">
 </head>
 <body>
     <div class="container">
@@ -31,8 +32,8 @@
                 <textarea rows="5" maxlength="50" id="contact-message" onkeyup="validateMessage()"></textarea>
                 <span id="message-error"></span>
             </div>
-            <button onclick="return validateForm()">Submit</button>
-            <span id="submit-error"></span>
+            <button type="submit" onclick="return validateForm()">Submit</button>
+            <span id="submit-error" class="show"></span>
         </form>
     </div>
     <script src="./index.js"></script>
