updated form validation

--- a/from validation/index.html
+++ b/from validation/index.html
@@ -32,7 +32,7 @@
                 <textarea rows="5" maxlength="50" id="contact-message" onkeyup="validateMessage()"></textarea>
                 <span id="message-error"></span>
             </div>
-            <button type="submit" onclick="return validateForm()">Submit</button>
+            <button type="submit" class="btn" onclick="return validateForm()">Submit</button>
             <span id="submit-error" class="show"></span>
         </form>
     </div>
