--- a/image_carousel/index.html
+++ b/image_carousel/index.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image carousel</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    
+    <i class="fa-solid fa-arrow-left" style="color: #ff9d4d;""></i>
+    <i class="fa-solid fa-arrow-right" style="color: #ff9d4d;"></i>
+    <div class="gallery">
+        <div>
+            <span>
+                <img src="./imgi/pexels-abrek-okur-622168308-32600114.jpg" alt="">
+                <img src="./imgi/pexels-artem-shuba-2153271717-32689373.jpg" alt="">
+                <img src="./imgi/pexels-berkay-mavral-389232961-15518197.jpg" alt="">
+            </span>
+        </div>
+    </div>
+    <script src="./index.js"></script>
 </body>
 </html>
