--- a/image_carousel/index.html
+++ b/image_carousel/index.html
@@ -28,7 +28,8 @@
         </div>
         <i class="fa-solid fa-arrow-right" id="nextBtn"></i>
     </div>
-    <div class="txt1">
+    <div class="texts">
+        <div class="txt1">
         <span id="1">W</span>
         <span id="2">a</span>
         <span id="3">l</span>
@@ -48,6 +49,7 @@
         <span id="6">s</span>
         <span id="7">e</span>
         <span id="8">l</span>
+    </div>
     </div>
 
     <script src="./index.js"></script>
