--- a/image_carousel/index.html
+++ b/image_carousel/index.html
@@ -30,26 +30,26 @@
     </div>
     <div class="texts">
         <div class="txt1">
-        <span id="1">W</span>
-        <span id="2">a</span>
-        <span id="3">l</span>
-        <span id="4">l</span>
-        <span id="5">p</span>
-        <span id="6">a</span>
-        <span id="7">p</span>
-        <span id="8">e</span>
-        <span id="9">r</span>
-    </div>
-    <div class="txt2">
-        <span id="1">C</span>
-        <span id="2">a</span>
-        <span id="3">r</span>
-        <span id="4">o</span>
-        <span id="5">u</span>
-        <span id="6">s</span>
-        <span id="7">e</span>
-        <span id="8">l</span>
-    </div>
+            <span class="1">W</span>
+            <span class="2">a</span>
+            <span class="3">l</span>
+            <span class="4">l</span>
+            <span class="5">p</span>
+            <span class="6">a</span>
+            <span class="7">p</span>
+            <span class="8">e</span>
+            <span class="9">r</span>
+        </div>
+        <div class="txt2">
+            <span class="1">C</span>
+            <span class="2">a</span>
+            <span class="3">r</span>
+            <span class="4">o</span>
+            <span class="5">u</span>
+            <span class="6">s</span>
+            <span class="7">e</span>
+            <span class="8">l</span>
+        </div>
     </div>
 
     <script src="./index.js"></script>
