email subscription project

--- a/email-subscription/index.html
+++ b/email-subscription/index.html
@@ -8,6 +8,15 @@
     <link rel="shortcut icon" href="img/icons8-friends-32.png" type="image/x-icon">
 </head>
 <body>
-    
+    <div class="hero">
+        <h3>Comming Soon!</h3>
+        <h1>Lets Meet again <br>Like the old Times</h1>
+        <p>Register by just sending me your email.</p>
+
+        <form>
+            <input type="email" name="Email" placeholder="Your Emai ID Here..." required>
+            <button type="submit"><img src="./img/interface-send-share-ui-ux-svgrepo-com.svg" width="70px"></button>
+        </form>
+    </div>
 </body>
 </html>
