email subscription project

--- a/email-subscription/index.html
+++ b/email-subscription/index.html
@@ -13,11 +13,12 @@
         <h1>Lets Meet again <br>Like the old Times</h1>
         <p>Register by just sending me your email.</p>
 
-        <form>
+        <form name="submit-to-google-sheet">
             <input type="email" name="Email" placeholder="Your Emai ID Here..." required>
             <button type="submit"><img src="./img/interface-send-share-ui-ux-svgrepo-com.svg" width="70px"></button>
         </form>
         <span> Thank you for being the part of this great experience!</span>
     </div>
+    <script src="./index.js"></script>
 </body>
 </html>
