--- a/email-subscription/index.html
+++ b/email-subscription/index.html
@@ -17,7 +17,7 @@
             <input type="email" name="Email" placeholder="Your Emai ID Here..." required>
             <button type="submit"><img src="./img/interface-send-share-ui-ux-svgrepo-com.svg" width="70px"></button>
         </form>
-        <span> Thank you for being the part of this great experience!</span>
+        <span id="msg"></span>
     </div>
     <script src="./index.js"></script>
 </body>
