email subscription project

--- a/email-subscription/index.html
+++ b/email-subscription/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="hero">
         <h3>Comming Soon!</h3>
-        <h1>Lets Meet again <br>Like the old Times</h1>
+        <h1>Lets Meet again <br>Like the <span id="grad">old Times</span></h1>
         <p>Register by just sending me your email.</p>
 
         <form name="submit-to-google-sheet">
