email subscription project

--- a/email-subscription/index.html
+++ b/email-subscription/index.html
@@ -18,6 +18,9 @@
             <button type="submit"><img src="./img/interface-send-share-ui-ux-svgrepo-com.svg" width="70px"></button>
         </form>
         <span id="msg"></span>
+        <div class="courtesy">
+            <span>© Fahim Morshed Nion</span>
+        </div>
     </div>
     <script src="./index.js"></script>
 </body>
