--- a/Password Strength/index.html
+++ b/Password Strength/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Password Strength Checker</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="input-box">
+            <input type="password" id="password" placeholder="Password">
+            <button type="submit"><img src="./img/arrow-circle-right-svgrepo-com.svg" width="50px">
+        </div>
+    </div>
+    <span id="msg">Password is</span>
 </body>
 </html>
