--- a/Password Strength/index.html
+++ b/Password Strength/index.html
@@ -10,9 +10,10 @@
     <div class="container">
         <div class="input-box">
             <input type="password" id="password" placeholder="Password">
-            <button type="submit"><img src="./img/arrow-circle-right-svgrepo-com.svg" width="50px">
+            <button type="submit"><img src="./img/arrow-circle-right-svgrepo-com.svg" width="50px"></button>
+            <p id="msg">passwod is wrong</p>
+
         </div>
     </div>
-    <span id="msg">Password is</span>
 </body>
 </html>
