--- a/Password Strength/index.html
+++ b/Password Strength/index.html
@@ -9,11 +9,11 @@
 <body>
     <div class="container">
         <div class="input-box">
-            <input type="password" id="password" placeholder="Password">
+            <input type="password" id="password" placeholder="Enter Password">
             <button type="submit"><img src="./img/arrow-circle-right-svgrepo-com.svg" width="50px"></button>
-            <p id="msg">passwod is wrong</p>
-
+            <p id="msg">Passwod is <span id="strngth"></span></p>
         </div>
     </div>
+    <script src="index.js"></script>
 </body>
 </html>
